--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -2,7 +2,7 @@
   align-items: flex-end;
   display: flex;
   height: auto;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 1280px;
   width: 100%;
 
