--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,12 +1,11 @@
 #main {
   align-items: center;
-  box-sizing: border-size;
+  box-sizing: border-box;
   display: flex;
   min-height: 100vh;
   justify-content: center;
-  margin: 20px 0;
+  padding: 20px 0;
   width: 100%;
-
 
   a {
     color: $blue;
